Thu Mar 28 14:26:19 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* tests/Cached_Allocator_Test.cpp: Added a missing template instantiation.

Thu Mar 28 10:45:16 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/tests.dsw:
	* tests/Cached_Allocator_Test.dsp: Added this new MSVC project.

Thu Mar 28 10:12:13 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Malloc_T.{h,i,cpp}: Added support for ACE_Dynamic_Cached_Allocator.
	  Thanks to Jaroslaw Nozderko <jareknz@polbox.com> for
 	  contributing this.

	* tests: Added Cached_Allocator_Test.cpp.  Thanks to
	  Jaroslaw Nozderko <jareknz@polbox.com> for contributing this.

	* tests/Makefile (BIN):
	* tests/run_test.lst: Added Cached_Allocator_Test.

Thu Mar 28 06:15:22 2002  Alex Libman <AlexL@rumblegroup.com>

        * ace/POSIX_Asynch_IO.cpp,
	  ace/POSIX_Asynch_IO.h:
	  ACE_POSIX_AOICB_Asynch_Operation and ACE_POSIX_Asynch_Operation
	  merged in one class ACE_POSIX_Asynch_Operation

	  Since POSIX_SIG_Proactor and SUN_Proactor are based on
 	  POSIX_AIOCB_Proactor and both of them use
 	  ACE_POSIX_AOICB_Asynch_Operation, there is no necessity to
 	  support extra class tree.

        * ace/POSIX_Asynch_IO.cpp,
	  ace/POSIX_Asynch_IO.h:
	  ACE_POSIX_AOICB_Transmit_Handler and ACE_POSIX_Transmit_Handler
	  merged in ACE_POSIX_Transmit_Handler for same reason as previous
	  change.

        * ace/POSIX_Asynch_IO.cpp,
	  ace/POSIX_Asynch_IO.h: ACE_POSIX_Asynch_Accept merged with
 	  ACE_POSIX_Asynch_Accept_Hanlder and redesigned and added
	  new class ACE_POSIX_Asynch_Accept_Task.

	  POSIX_AIOCB_Proactor has new member
	  ACE_POSIX_Asynch_Accept_Task   asynch_accept_task_.

	  Task activation should be done from the most derived
 	  constructors , when the final table of virtual functions is
 	  built (simular case with notify_manager).

	  // start asynch accept task
	  this->get_asynch_accept_task.start ();

          All POSIX_Proactors implementations ( AIOCB,SIG,SUN ) should